# TylerAudio

./: .clang-format  .clang-tidy  .gitignore  BETA_DISTRIBUTION_GUIDE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  RAPID_ITERATION_GUIDE.md  README.md  build.bat  build.sh  vibecodevideo.md
.claude/: settings.local.json
.github/workflows/: build.yml
archived-projects/TingeTape/: CLAUDE.md  CMakeLists.txt
archived-projects/TingeTape/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
archived-projects/TingeTape/docs/: PRESET_GUIDE.md  checklist.md  spec.md
archived-projects/TingeTape/docs/claude/: 1_juce_research.md  2_juce_specification.md  3_juce_checklist.md  4_juce_build.md
archived-projects/TingeTape/docs/research/: juce_dsp_patterns.md  tape_emulation_algorithms.md  technical_specifications.md
archived-projects/TingeTape/tests/: CMakeLists.txt  test_tingetape_smoke.cpp
build-xcode/plugins/ExamplePlugin/ExamplePlugin_artefacts/JuceLibraryCode/: Info.txt
build-xcode/plugins/ExamplePlugin/ExamplePlugin_artefacts/JuceLibraryCode/Debug/: Defs.txt
build-xcode/plugins/ExamplePlugin/ExamplePlugin_artefacts/JuceLibraryCode/ExamplePlugin_AU/: Info.plist
build-xcode/plugins/ExamplePlugin/ExamplePlugin_artefacts/JuceLibraryCode/ExamplePlugin_Standalone/: Info.plist
build-xcode/plugins/ExamplePlugin/ExamplePlugin_artefacts/JuceLibraryCode/ExamplePlugin_VST3/: Info.plist
build-xcode/plugins/ExamplePlugin/ExamplePlugin_artefacts/JuceLibraryCode/RelWithDebInfo/: Defs.txt
build-xcode/plugins/TingeTape/TingeTape_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h
build-xcode/plugins/TingeTape/TingeTape_artefacts/JuceLibraryCode/Debug/: Defs.txt
build-xcode/plugins/TingeTape/TingeTape_artefacts/JuceLibraryCode/RelWithDebInfo/: Defs.txt
build-xcode/plugins/TingeTape/TingeTape_artefacts/JuceLibraryCode/TingeTape_AU/: Info.plist
build-xcode/plugins/TingeTape/TingeTape_artefacts/JuceLibraryCode/TingeTape_VST3/: Info.plist
docs/: API_REFERENCE.md  DEVELOPMENT_GUIDE.md  LEARNING_PATH.md  QUICK_START.md
framework/: TestUtilities.h  UITestUtilities.cpp
framework/TestFramework/: audio_test_utils.cpp  audio_test_utils.h  benchmark_main.cpp  test_main.cpp  test_shared_utilities.cpp
plugins/: CMakeLists.txt
plugins/ExamplePlugin/: CMakeLists.txt
plugins/ExamplePlugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/TingeTape/: CMakeLists.txt
plugins/TingeTape/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/TingeTape/docs/: DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_GUIDE.md  USER_GUIDE.md
plugins/TingeTape/docs/research/: reference_implementations.md
plugins/TingeTape/tests/: CMakeLists.txt  test_tingetape_integration.cpp  test_tingetape_performance.cpp  test_tingetape_quality.cpp  test_tingetape_saturation_detailed.cpp  test_tingetape_tone_detailed.cpp  test_tingetape_unit.cpp  test_tingetape_validation.cpp  test_tingetape_wow_detailed.cpp
scripts/: create-plugin.sh  pre-commit  run-smoke-tests.sh
shared/: IntegrationTestFramework.h  PerformanceTestFramework.h  TestUtilities.cpp  TylerAudioCommon.h  UITestUtilities.h
templates/BasicEffect/: CMakeLists.txt  README.md
templates/BasicEffect/Source/: PluginProcessor.cpp  PluginProcessor.h
tests/: CMakeLists.txt  benchmark_dsp.cpp  smoke_tests.cpp  test_example_plugin.cpp
tools/: create-plugin.sh  deploy-plugins.sh  dev-build.sh  dev-setup.sh  new-plugin.sh  package-release.sh  rapid-test.sh  validate-plugin.sh  watch-build.sh
